apply grayscale, brightness, contrast filters and opacity to stopped images

--- a/src/assets/scss/common/_card.scss
+++ b/src/assets/scss/common/_card.scss
@@ -56,7 +56,9 @@
 		justify-content: center;
 
 		&.stop img {
-			filter: grayscale(100%);
+			filter: grayscale(100%) brightness(50%) contrast(120%);
+			opacity: 0.8;
+			transition: all 0.3s ease;
 		}
 
 		img {
